fixed overflow issues in desktop screen optimization

--- a/src/components/form-steps/formsteps.css
+++ b/src/components/form-steps/formsteps.css
@@ -43,8 +43,7 @@
     padding: 1.5rem;
     height: 100%;
     background-image: url(../../../public/assets/images/bg-sidebar-desktop.svg);
-    background-position: bottom left;
-    border-radius: 0.5rem 0.5rem 0 0;
+    background-size: contain;
 
     justify-content: start;
   }
